@@ -8,3 +8,15 @@
 
 -Xverify:none  关闭类加载阶段的验证
 
+-verbose:gc  启动垃圾收集详细情况
+
+-Xms20M  虚拟机最小内存20M
+
+-Xmx20M  虚拟机最大内存20M
+
+-XX:+PrintGCDetails  打印GC收集器的细节
+
+-Xmn10M  年轻代大小
+
+-XX:SurvivorRatio=8  Eden区与Survivor区的大小比值
+
